fix: sign in modal is not covering navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
 nav {
     position: relative;
     width: 100%;
-    z-index: 10001;
+    z-index: 1000;
     background-color: #fff;
 }
 
